# eTIOBench

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  TIME_SERIES_IMPLEMENTATION.md  USER_GUIDE.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml  tox-gh-actions.ini
docs/: Makefile  README.md  conf.py  index.rst  modules.rst  tdiobench.analysis.rst  tdiobench.cli.rst  tdiobench.collection.rst  tdiobench.config.rst  tdiobench.core.rst  tdiobench.engines.rst  tdiobench.results.rst  tdiobench.rst  tdiobench.tests.rst  tdiobench.utils.rst  tdiobench.visualization.rst
examples/config_examples/: nvme_benhcmark.json  production_safe.json  tiered_benchmark.yaml
results/: report.html  report.json
results/11796a35-3028-4f4c-a293-1578c673aade/: result.json
results/7224d1a5-6917-4124-95e8-f6638b06ea7d/: result.json
results/7ce48fdd-b669-4b6e-8d97-b5c37937f332/: result.json
results/9a682428-786a-4efe-bc7f-6160e7a13f7a/: result.json
results/a55a1882-3772-4c6b-898a-5b0a36d076cb/: result.json
results/a98ce8c9-1f10-4754-b18a-a868053e25c1/: result.json
results/aca5889f-e1bb-4372-a426-3025eb01ed02/: result.json
scripts/: check_environment.py  install_dependencies.sh
tdiobench/: __init__.py  __version__.py  cpp_integration.py
tdiobench/analysis/: __init__.py  anomaly_detector.py  base_analyzer.py  network_analyzer.py  statistical_analyzer.py  time_series_analyzer.py
tdiobench/cli/: __init__.py  commandline.py  commands.py  enhanced_chart_generator.py  profile_manager.py  safety_controller.py  utils.py
tdiobench/collection/: __init__.py  system_metrics_collector.py  time_series_collector.py
tdiobench/config/: __init__.py  default_config.json  default_config.yaml  schema.json
tdiobench/core/: __init__.py  benchmark_analysis.py  benchmark_config.py  benchmark_data.py  benchmark_exceptions.py  benchmark_runner.py  benchmark_suite.py  tier_manager.py
tdiobench/cpp_core/: CMakeLists.txt  CMakeLists.txt.bak  README.md  build.sh  python_integration.py  setup.py
tdiobench/cpp_core/common/: data_processor.hpp  simd_utils.cpp  simd_utils.hpp  threading_utils.cpp  threading_utils.hpp
tdiobench/cpp_core/include/: data_processor.hpp  statistical_analyzer.hpp
tdiobench/cpp_core/include/common/: simd_utils.hpp  threading_utils.hpp
tdiobench/cpp_core/include_backup/: data_processor.hpp  network_analyzer.hpp  time_series_collector.hpp
tdiobench/cpp_core/python_bindings/: CMakeLists.txt  data_processor_binding.cpp  module.cpp  statistical_analyzer_binding.cpp  time_series_collector_binding.cpp
tdiobench/cpp_core/src/: data_processor.cpp  statistical_analyzer.cpp  time_series_collector.cpp
tdiobench/engines/: __init__.py  fio_engine.py
tdiobench/examples/config_examples/: lustre_benchmark.yaml
tdiobench/results/: __init__.py  result_store.py  results_aggregator.py
tdiobench/tests/: __init__.py  test_base.py  test_core.py  test_integration.py  test_statistical_analyzer.py  test_utils.py
tdiobench/utils/: __init__.py  data_processor.py  documentation.py  error_handling.py  naming_conventions.py  parameter_standards.py
tdiobench/visualization/: __init__.py  chart_generator.py  report_generator.py
